# course_creator

./: 0_Basic_dev_principles.md  1_Monolith_vs_Microservices.md  2_Sync_vs_async_in_services.md  3_Multithreading.md  4_NFR_and_CAP.md  5_DDD_and_so_on.md  6_Shared_data_management.md  7_Calculate_solution_metrics_and_costs.md  8_Why_devops_needed_and_what_is_k8s.md  9_Architecture_artifacts.md  README.md  analyst_review.md  course.md  course_raw.md  developer_review.md  final_course_ready.md  hexagonal_vs_clean.md  illustrations.md  pyproject.toml
src/course_creator/: crew.py  main.py
src/course_creator/config/: agents.yaml  tasks.yaml
src/course_creator/tools/: mermaid_tool.py
