[project]
name = "course_creator"
version = "0.1.0"
description = "course_creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.14.0,<1.14.5a0",
]

[project.scripts]
course_creator = "course_creator.main:run"
run_crew = "course_creator.main:run"
train = "course_creator.main:train"
replay = "course_creator.main:replay"
test = "course_creator.main:test"
run_with_trigger = "course_creator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
